--- a/springrest/src/main/resources/application.properties
+++ b/springrest/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=20
